--- a/tbdr/templates/base.html
+++ b/tbdr/templates/base.html
@@ -27,30 +27,33 @@
   </head>
   <body>
 		<nav class="navbar  navbar-expand-lg sticky-top navbar-dark bg-dark  shadow">
-		  <a class="navbar-brand" href="{{ url_for('home.index') }}">TB-Profiler</a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
+			<a class="navbar-brand" href="{{ url_for('home.index') }}">TB-Profiler</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    <ul class="navbar-nav mr-auto">
-		      <li class="nav-item">
-		        <a class="nav-link" href="{{ url_for('home.index') }}">Home</a>
-		      </li>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-		        <a class="nav-link" href="{{ url_for('upload.upload') }}">Upload</a>
-		      </li>
+						<a class="nav-link" href="{{ url_for('home.index') }}">Home</a>
+					</li>
 					<li class="nav-item">
-		        <a class="nav-link" href="{{ url_for('sra.sra') }}">SRA data</a>
-		      </li>
-
-		    
+						<a class="nav-link" href="{{ url_for('upload.upload') }}">Upload</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ url_for('sra.sra') }}">SRA data</a>
+					</li>
+					
+					<li class="nav-item">
+						<a class="nav-link" href="{{ url_for('tb_crowd.home') }}">TB-CODE</a>
+					</li>
+				</ul>
 			</div>
 		</nav>
 
 		<div class="container-fluid">
 			{% for message in get_flashed_messages() %}
-    		    <div class="alert alert-danger" role="alert">{{ message }}</div>
+    		    <div class="alert alert-danger mt-2" role="alert">{{ message }}</div>
     		{% endfor %}
     		{% block content %}{% endblock %}
 		</div>
