--- a/tbdr/templates/results/run_result.html
+++ b/tbdr/templates/results/run_result.html
@@ -84,7 +84,7 @@
 
     		<div class="card border-dark shadow">
     			<div class="card-header bg-dark text-white text-center">
-                    Drug resistance: This table reports	drug-resistance asociated
+                    Drug resistance: This table reports	drug-resistance associated
                     mutations found in known resistance genes
     			</div>
     			 <div class="card-body">
