--- a/tbdr/templates/upload/upload.html
+++ b/tbdr/templates/upload/upload.html
@@ -62,6 +62,11 @@
                         <div>{{form.platform}}</div>
 					</div>
 					
+					<div class="form-group">
+						<div>{{form.pairing.label}}:</div>
+                        <div>{{form.pairing}}</div>
+					</div>
+
 					<a class="btn btn-outline-primary mt-4 mb-4" data-toggle="collapse" href="#advanced_options_collapse" role="button" aria-expanded="false" aria-controls="advanced_options_collapse">
 						Advanced options
 					</a>
