--- a/tbdr/templates/utils.html
+++ b/tbdr/templates/utils.html
@@ -12,17 +12,19 @@
 
 {% macro drtype_badge(text,drtype) -%}
 	{% if drtype=="Sensitive" %}
-		<span class="badge badge-success">{{text}}</span>
+	<span class="badge" style="background-color: #28a745;">{{text}}</span>
+	{% elif drtype=="RR-TB" %}
+	<span class="badge" style="background-color: #007bff;">{{text}}</span>
+	{% elif drtype=="HR-TB" %}
+	<span class="badge" style="background-color: #E0ACD5;">{{text}}</span>
+	{% elif drtype=="MDR-TB" %}
+	<span class="badge" style="background-color: #ffc107;">{{text}}</span>
+	{% elif drtype=="Pre-XDR-TB" %}
+	<span class="badge" style="background-color: #dc3545;">{{text}}</span>
+	{% elif drtype=="XDR-TB" %}
+	<span class="badge" style="background-color: #343a40; color: #f8f9fa;">{{text}}</span>
 	{% elif drtype=="Other" %}
-		<span class="badge badge-light">{{text}}</span>
-	{% elif drtype=="XDR" %}
-		<span class="badge badge-dark">{{text}}</span>
-	{% elif drtype=="MDR" %}
-		<span class="badge badge-warning">{{text}}</span>
-	{% elif drtype=="Pre-MDR" %}
-		<span class="badge badge-primary">{{text}}</span>
-	{% elif drtype=="Pre-XDR" %}
-		<span class="badge badge-danger">{{text}}</span>
+	<span class="badge" style="background-color: #f8f9fa;">{{text}}</span>
 	{% endif %}
 {%- endmacro %}
 
