--- a/tbdr/templates/sra/browse.html
+++ b/tbdr/templates/sra/browse.html
@@ -155,8 +155,7 @@ $( function() {
 				</div>
 
 			{% else %}
-
-				{{ utils.generic_table(data,{"sample_link":"ID","drtype":"Drug resistance","country":"Country","lineage":"Lineage","spoligotype":"Spoligotype"},"Samples")}}
+				{{ utils.generic_table(data,{"sample_link":"ID","drtype":"Drug resistance","country_code":"Country","lineage":"Lineage","spoligotype":"Spoligotype"},"Samples")}}
 			{% endif %}
 		<div>
 	<div>
