--- a/tbdr/templates/sra/browse.html
+++ b/tbdr/templates/sra/browse.html
@@ -77,10 +77,11 @@ $( function() {
 							    <label for="exampleFormControlSelect2">Drug resistance</label>
 							    <select name="drtype" multiple class="form-control" id="exampleFormControlSelect2">
 							      	<option>Sensitive</option>
-							      	<option>Pre-MDR</option>
-							      	<option>MDR</option>
-							      	<option>Pre-XDR</option>
-							      	<option>XDR</option>
+							      	<option>RR-TB</option>
+							      	<option>HR-TB</option>
+							      	<option>MDR-TB</option>
+							      	<option>Pre-XDR-TB</option>
+							      	<option>XDR-TB</option>
 									<option>Other</option>
 							    </select>
 						  	</div>
