increase file size

--- a/tbdr/templates/upload/upload.html
+++ b/tbdr/templates/upload/upload.html
@@ -19,7 +19,7 @@
 
 </div>
 <div class="pb-4">
-    <b>Please note:</b> at the moment we can only accomodate uploads of under 1GB.
+    <b>Please note:</b> at the moment we can only accomodate uploads of files under 4GB.
     If you have files which are larger or you require many	isolates to be processed
     and have access to a linux or osX operating system then	it might be worthwhile
     to run the commandline version of tb-profiler. For more information on this please visit the
@@ -36,8 +36,7 @@
 			</div>
 			<div class="card-body">
 				<p class="card-text">
-					You can upload multiple samples together to batch process them. At the
-					 moment batch uploading only supports paried end reads. By default, files must use
+					You can upload multiple samples together to batch process them. By default, paired files must use
 					 <b>_1.fastq.gz</b> and <b>_2.fastq.gz</b> as the file suffix in order for them
 					 to be paired correctly. The suffix can be changed in the advanced options.
 				</p>
