--- a/tbdr/templates/upload/upload_complete.html
+++ b/tbdr/templates/upload/upload_complete.html
@@ -12,9 +12,36 @@
 
 {% block content %}
 
+<div class="row justify-content-md-center pt-4 pb-4">
+    <div class="col-md-10">
+        <div>
+            Your runs have been submitted and will be processed shortly. 
+            You can view the status of your runs by clicking on the links below.
+
+        </div>
+        <div>
+            While you wait would you be willing to give some feedback on TB-Profiler? 
+            <button data-tf-slider="lS4u9U0O" data-tf-position="right" data-tf-opacity="100" data-tf-iframe-props="title=TBDR feedback" data-tf-transitive-search-params data-tf-medium="snippet" class="btn btn-info p-1 m-2">Sure!</button><script src="//embed.typeform.com/next/embed.js"></script>
+
+        </div>
+    </div>
+</div>
+
 <div class="row justify-content-md-center">
     <div class="col-md-10">
         {{utils.generic_table(runs,{"link":"Run ID","sample_name":"Sample name","R1":"Forward read","R2":"Reverse read"},"Submitted runs",True)}}
+    </div>
+</div>
+
+<div class="row justify-content-center text-center pt-4">
+    <div class="col-mt-8">
+        <div class="">
+
+            
+        </div>
+        <div class="pt-4">
+
+        </div>
     </div>
 </div>
 
