--- a/tbdr/templates/sra/browse.html
+++ b/tbdr/templates/sra/browse.html
@@ -156,7 +156,7 @@ $( function() {
 				</div>
 
 			{% else %}
-				{{ utils.generic_table(data,{"sample_link":"ID","drtype":"Drug resistance","country_code":"Country","lineage":"Lineage","spoligotype":"Spoligotype"},"Samples")}}
+				{{ utils.generic_table(data,{"sample_link":"ID","drtype":"Drug resistance","country_code":"Country","lineage":"Lineage","spoligotype":"Spoligotype"},"Samples",buttons=True)}}
 			{% endif %}
 		<div>
 	<div>
