--- a/tbdr/templates/results/run_result.html
+++ b/tbdr/templates/results/run_result.html
@@ -57,6 +57,8 @@
 {% else %}
 
 
+	
+
     <div class="row justify-content-md-center">
         <div class="col-md-10">
     		<div class="card border-dark mb-3 shadow">
@@ -150,6 +152,12 @@
     		</div>
     	</div>
     </div>
+
+	<div class="row justify-content-md-center">
+        <div class="col-md-10">
+			{{utils.transmission_graph(result["transmission_graph"])}}
+		</div>
+	</div>
 
     <div class="row justify-content-md-center">
         <div class="col-md-10">
