--- a/tbdr/templates/base.html
+++ b/tbdr/templates/base.html
@@ -72,5 +72,10 @@
 		<!-- 100% privacy friendly analytics -->
 		<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 		<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+		<script>
+			$(function () {
+				$('[data-toggle="tooltip"]').tooltip()
+			})	
+		</script>
   </body>
 </html>
