--- a/tbdr/templates/results/run_result.html
+++ b/tbdr/templates/results/run_result.html
@@ -66,9 +66,9 @@
     				<p class="card-text"><b>Sample name:</b> {{ result["sample_name"] }}</p>
                     <p class="card-text"><b>Date:</b> {{ result["timestamp"] }}</p>
                     <p><b>Number of reads:</b> {{ result["qc"]["num_reads_mapped"]}}</p>
-                    <p><b>Percentage reads mapped:</b> {{ result["qc"]["pct_reads_mapped"]}}</p>
-                    <p><b>Median coverage:</b> {{ result["qc"]["median_coverage"]}}</p>
-    				<p class="card-text"><b>Strain:</b> {{ result["sublin"] }}</p>
+                    <p><b>Percentage reads mapped:</b> {{ result["qc"]["percent_reads_mapped"]}}</p>
+                    <p><b>Median coverage:</b> {{ result["qc"]["target_median_depth"]}}</p>
+    				<p class="card-text"><b>Strain:</b> {{ result["sub_lineage"] }}</p>
 					{% if "spoligotype" in result %}
 						<p class="card-text"><b>Spoligotype:</b> {{ result["spoligotype"]["octal"] }}</p>
 					{% endif %}
@@ -77,13 +77,46 @@
     				<hr>
 					<a class="btn btn-outline-success" href="{{ url_for('static', filename='results/') + result['id']}}.results.csv">Download CSV</a>
 					<a class="btn btn-outline-success" href="{{ url_for('static', filename='results/') + result['id']}}.results.txt">Download TXT</a>
-					<a class="btn btn-outline-success" href="{{ url_for('static', filename='results/') + result['id']}}.results.pdf">Download PDF</a>
 					<a class="btn btn-outline-success" href="{{ url_for('static', filename='results/') + result['id']}}.results.json">Download JSON</a>
 					
     			</div>
     		</div>
     	</div>
     </div>
+
+
+	<div class="row justify-content-md-center">
+        <div class="col-md-10">
+			<div class="card border-dark shadow">
+    			<div class="card-header bg-dark text-white text-center">Lineage Table: The lineage is inferred by
+    				analysing lineage specific SNPs
+    			</div>
+    			<div class="card-body">
+    				<table class="table">
+    					<thead>
+    						<tr>
+    							<th scope="col">Lineage</th>
+    							<th scope="col">Family</th>
+    							<th scope="col">RDs</th>
+                                <th scope="col">Frequency</th>
+    						</tr>
+    					</thead>
+    					<tbody>
+    					{% for row in result["lineage"] %}
+    						<tr>
+    							<td>{{ row["lineage"] }}</td>
+    							<td>{{ row["family"] }}</td>
+    							<td>{{ row["rd"] }}</td>
+                                <td>{{ row["fraction"]|round(2)|float }}</td>
+    						</tr>
+    					{% endfor %}
+    					</tbody>
+    				</table>
+    			 </div>
+    		</div>
+    	</div>
+    </div>
+
 
     <div class="row justify-content-md-center">
         <div class="col-md-10">
@@ -100,14 +133,31 @@
     				      <th scope="col">Drug</th>
     				      <th scope="col">Resistance</th>
     				      <th scope="col">Supporting mutations</th>
+    				      <th scope="col">WHO confidence</th>
+    				      <th scope="col">Comment</th>
     				    </tr>
     					</thead>
     				  <tbody>
     					{% for drug_row in result["drug_table"] %}
     						<tr>
-    							<td>{{ drug_row["Drug"] }}</td>
-    							<td>{{ drug_row["Genotypic Resistance"] }}</td>
-    							<td>{{ drug_row["Mutations"] }}</td>
+								{% if 'drug-rowspan' in drug_row %}
+									{% if drug_row['drug-rowspan']>1 %}
+    									<td rowspan="2">{{ drug_row["drug"] }}</td>
+										{% else %}
+										<td>{{ drug_row["drug"] }}</td>
+									{% endif %}
+								{% endif %}
+								{% if 'gene-rowspan' in drug_row %}
+									{% if drug_row['gene-rowspan']>1 %}
+										<td rowspan="2">{{ drug_row["gene"] }}</td>
+									{% else %}
+    									<td>{{ drug_row["gene"] }}</td>
+									{% endif %}
+								{% endif %}
+
+    							<td>{{ drug_row["change"] }}</td>
+    							<td>{{ drug_row["confidence"] }}</td>
+    							<td>{{ drug_row["comment"] }}</td>
     						</tr>
     					{% endfor %}
     					</tbody>
@@ -117,39 +167,7 @@
     	</div>
     </div>
 
-    <div class="row justify-content-md-center">
-        <div class="col-md-10">
-			<div class="card border-dark shadow">
-    			<div class="card-header bg-dark text-white text-center">Lineage Table: The lineage is inferred by
-    				analysing lineage specific SNPs
-    			</div>
-    			<div class="card-body">
-    				<table class="table">
-    					<thead>
-    						<tr>
-    							<th scope="col">Lineage</th>
-    							<th scope="col">Family</th>
-    							<th scope="col">Main Spoligotype</th>
-    							<th scope="col">RDs</th>
-                                <th scope="col">Frequency</th>
-    						</tr>
-    					</thead>
-    					<tbody>
-    					{% for row in result["lineage"] %}
-    						<tr>
-    							<td>{{ row["lin"] }}</td>
-    							<td>{{ row["family"] }}</td>
-    							<td>{{ row["spoligotype"] }}</td>
-    							<td>{{ row["rd"] }}</td>
-                                <td>{{ row["frac"]|round(2)|float }}</td>
-    						</tr>
-    					{% endfor %}
-    					</tbody>
-    				</table>
-    			 </div>
-    		</div>
-    	</div>
-    </div>
+    
 
     <div class="row justify-content-md-center">
         <div class="col-md-10">
@@ -169,18 +187,25 @@
                                 <th scope="col">Type</th>
                                 <th scope="col">Estimated fraction</th>
                                 <th scope="col">Drugs</th>
+                                <th scope="col">Confidence</th>
+                                <th scope="col">Comment</th>
     						</tr>
     					</thead>
     					<tbody>
     					{% for var in result["dr_variants"] %}
-    						<tr>
-    							<td>{{ var["gene"] }}</td>
-    							<td>{{ var["genome_pos"] }}</td>
-    							<td><a href="{{ url_for('variants.variant',gene=var['locus_tag'],variant=var['change']) }}">{{ var["change"] }}</a></td>
-                                <td>{{ var["type"] }}</td>
-                                <td>{{ var["freq"]|round(2)|float }}</td>
-                                <td>{{ var["drugs"] }}</td>
-    						</tr>
+							{% for d in var["drugs"] %}
+								<tr>
+									{{utils.row_val(var["gene_name"],loop.index,var["drugs"]|length) }}
+									{{ utils.row_val(var["pos"],loop.index,var["drugs"]|length) }}
+									{{ utils.row_val(var["change"],loop.index,var["drugs"]|length,url_for('variants.variant',gene=var['locus_tag'],variant=var['change']))}}
+									{{ utils.row_val(var["type"],loop.index,var["drugs"]|length) }}
+									{{ utils.row_val(var["freq"]|round(2)|float,loop.index,var["drugs"]|length) }}
+									{{ utils.row_val(d['drug'],loop.index,var["drugs"]|length) }}
+									{{ utils.row_val(d["confidence"]) }}
+									{{ utils.row_val(d["comment"]) }}
+
+								</tr>
+							{% endfor %}
     					{% endfor %}
     					</tbody>
     				</table>
@@ -204,18 +229,31 @@
     							<th scope="col">Chromosome position</th>
     							<th scope="col">Mutation</th>
                                 <th scope="col">Type</th>
-    							<th scope="col">Estimated fraction</th>
+    							<th scope="col">
+									Estimated fraction
+									<span data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle" viewBox="0 0 16 16">
+											<path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+											<path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286m1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94"/>
+										  </svg>
+									</span>
+									
+								</th>
     						</tr>
     					</thead>
     					<tbody>
     					{% for var in result["other_variants"] %}
-    						<tr>
-    							<td>{{ var["gene"] }}</td>
-    							<td>{{ var["genome_pos"] }}</td>
-    							<td><a href="{{ url_for('variants.variant',gene=var['locus_tag'],variant=var['change']) }}">{{ var["change"] }}</a></td>
-                                <td>{{ var["type"] }}</td>
-    							<td>{{ var["freq"]|round(2)|float  }}</td>
-    						</tr>
+							{% for ann in var["annotation"] %}
+								<tr>
+									{{utils.row_val(var["gene_name"],loop.index,var["annotation"]|length)}}
+									{{utils.row_val(var["pos"],loop.index,var["annotation"]|length)}}
+									{{utils.row_val(var["change"],loop.index,var["annotation"]|length,url_for('variants.variant',gene=var['locus_tag'],variant=var['change'])) }}
+									{{utils.row_val(var["type"],loop.index,var["annotation"]|length)}}
+									{{utils.row_val(var["freq"]|round(2)|float,loop.index,var["annotation"]|length)}}
+									{{utils.row_val(ann["drug"])}}
+									{{utils.row_val(ann["confidence"])}}
+								</tr>
+								{% endfor %}
     					{% endfor %}
     					</tbody>
     				</table>
@@ -241,10 +279,10 @@
         						</div>
         						<hr>
         						{% for var in result["dr_variants"]%}
-        							<button type="button" class="btn btn-outline-primary mb-3" onclick="setPileupView(this)" pos="{{ var['genome_pos'] }}">{{ var["gene"] }} {{ var["change"] }}</button>
+        							<button type="button" class="btn btn-outline-primary mb-3" onclick="setPileupView(this)" pos="{{ var['pos'] }}">{{ var["gene_name"] }} {{ var["change"] }}</button>
         						{% endfor %}
         						{% for var in result["other_variants"] %}
-        							<button type="button" class="btn btn-outline-success mb-3" onclick="setPileupView(this)" pos="{{ var['genome_pos'] }}">{{ var["gene"] }} {{ var["change"] }}</button>
+        							<button type="button" class="btn btn-outline-success mb-3" onclick="setPileupView(this)" pos="{{ var['pos'] }}">{{ var["gene_name"] }} {{ var["change"] }}</button>
         						{% endfor %}
         					</div>
 
@@ -262,18 +300,18 @@
         	json_result = {{ result|tojson|safe }}
         	variants = {}
         	json_result.dr_variants.forEach((item, i) => {
-        		variants[item.genome_pos] = item
+        		variants[item.pos] = item
         	});
         	json_result.other_variants.forEach((item, i) => {
-        		variants[item.genome_pos] = item
+        		variants[item.pos] = item
         	});
         	console.log(variants)
 
             document.addEventListener("DOMContentLoaded", function () {
                 {% if result['dr_variants']|length > 0 %}
-                    locus = "Chromosome:{{result['dr_variants'][0]['genome_pos']|int-10}}-{{result['dr_variants'][0]['genome_pos']|int+10}}"
+                    locus = "Chromosome:{{result['dr_variants'][0]['pos']|int-10}}-{{result['dr_variants'][0]['pos']|int+10}}"
                 {% elif  result['dr_variants']|length > 0 %}
-                    locus = "Chromosome:{{result['other_variants'][0]['genome_pos']|int-10}}-{{result['other_variants'][0]['genome_pos']|int+10}}"
+                    locus = "Chromosome:{{result['other_variants'][0]['pos']|int-10}}-{{result['other_variants'][0]['pos']|int+10}}"
                 {% else %}
                     locus = "Chromosome:1-100"
                 {% endif %}
@@ -317,7 +355,7 @@
 
         <div class="row justify-content-center">
             <div class="col-md-5">
-                {{utils.generic_table(result["qc"]["gene_coverage"],{"gene":"Gene","locus_tag":"Locus Tag","fraction":"Fraction","cutoff":"Cutoff"},"Gene coverage")}}
+                {{utils.generic_table(result["qc"]["target_qc"],{"target":"Gene","percent_depth_pass":"% pass","median_depth":"Median depth"},"Gene coverage")}}
             </div>
 			{% if "spoligotype" in result %}
 				<div class="col-md-5">
@@ -333,8 +371,6 @@
         				<p><b>TB-Profiler version:</b> {{ result["tbprofiler_version"] }}</p>
                         <p><b>Database name:</b> {{ result["db_version"]["name"] }}</p>
                         <p><b>Database version:</b> {{ result["db_version"]["commit"] }}</p>
-                        <p><b>Mapping software:</b> {{ result["pipeline"]["mapper"] }}</p>
-                        <p><b>Variant calling software:</b> {{ result["pipeline"]["variant_caller"] }}</p>
 
 
         			</div>
