--- a/tbdr/templates/results/run_result.html
+++ b/tbdr/templates/results/run_result.html
@@ -12,6 +12,12 @@
         height:500px;
         overflow:scroll;
     }
+	/* on hover over a card element */
+	.card:hover {
+		box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+		transform: scale(1.005);
+	}
+	
 </style>
 {% endblock %}
 
@@ -59,7 +65,7 @@
 
     <div class="row justify-content-md-center">
         <div class="col-md-10">
-    		<div class="card border-dark mb-3 shadow">
+    		<div class="card border-dark mb-3">
     			<div class="card-header bg-dark text-white text-center">Summary</div>
     			<div class="card-body text-dark">
     				<p class="card-text"><b>Run ID:</b> {{ result["id"] }}</p>
@@ -87,7 +93,7 @@
 
 	<div class="row justify-content-md-center">
         <div class="col-md-10">
-			<div class="card border-dark shadow">
+			<div class="card border-dark">
     			<div class="card-header bg-dark text-white text-center">Lineage Table: The lineage is inferred by
     				analysing lineage specific SNPs
     			</div>
@@ -121,7 +127,7 @@
     <div class="row justify-content-md-center">
         <div class="col-md-10">
 
-    		<div class="card border-dark shadow">
+    		<div class="card border-dark">
     			<div class="card-header bg-dark text-white text-center">
                     Drug resistance: This table reports	drug-resistance associated
                     mutations found in known resistance genes
@@ -171,7 +177,7 @@
 
     <div class="row justify-content-md-center">
         <div class="col-md-10">
-    		<div class="card border-dark shadow">
+    		<div class="card border-dark">
     			<div class="card-header bg-dark text-white text-center">
                     Drug resistance-Associated Mutations: This table reports
     				mutations found in candidate resistance genes which have been
@@ -216,7 +222,7 @@
 
     <div class="row justify-content-md-center">
         <div class="col-md-10">
-    		<div class="card border-dark shadow">
+    		<div class="card border-dark">
     			<div class="card-header bg-dark text-white text-center">Non-Associated Mutations: This table reports
     				mutations found in candidate resistance genes which have not been
     				associated with drug resistance
@@ -231,13 +237,12 @@
                                 <th scope="col">Type</th>
     							<th scope="col">
 									Estimated fraction
-									<span data-toggle="tooltip" data-placement="top" title="Tooltip on top">
-										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle" viewBox="0 0 16 16">
-											<path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-											<path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286m1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94"/>
-										  </svg>
-									</span>
-									
+									<i class="bi bi-question-circle" data-bs-toggle="tooltip" data-bs-title="Faction of the reads that support this variant"></i>
+								</th>
+								<th scope="col">Drugs</th>
+								<th scope="col">
+									Confidence
+									<i class="bi bi-question-circle" data-bs-toggle="tooltip" data-bs-title="Confidence variant/drug association according to the WHO ed. 2 mutation catalogue"></i>
 								</th>
     						</tr>
     					</thead>
@@ -265,7 +270,7 @@
     {% if bam_found %}
         <div class="row justify-content-md-center">
             <div class="col-md-10">
-                <div class="card border-dark mb-3 shadow">
+                <div class="card border-dark mb-3">
             		<div class="card-header bg-dark text-white text-center">Pileup</div>
         			<div class="card-body text-dark">
         				<div class="row">
@@ -365,7 +370,7 @@
         </div>
 		<div class="row justify-content-center">
 			<div class="col-md-5">
-                <div class="card border-dark mb-3 shadow">
+                <div class="card border-dark mb-3">
         			<div class="card-header bg-dark text-white text-center">Software</div>
         			<div class="card-body text-dark">
         				<p><b>TB-Profiler version:</b> {{ result["tbprofiler_version"] }}</p>
