--- a/tbdr/templates/utils.html
+++ b/tbdr/templates/utils.html
@@ -181,7 +181,7 @@ background-color: #f8f9fa;
 
 {% macro generic_tuple_table(rows,columns,name,buttons=False) -%}
 	{% set rand_id = range(1, 5000) | random %}
-	<div class="card border-dark shadow">
+	<div class="card border-dark">
 		<div class="card-header text-center bg-dark text-white">
 		  	{{name}}
 		</div>
@@ -228,7 +228,7 @@ background-color: #f8f9fa;
 
 
 	{% set rand_id = range(1, 5000) | random %}
-	<div class="card border-dark shadow">
+	<div class="card border-dark">
 		<div class="card-header text-center bg-dark text-white">
 		  	{{name}}
 		</div>
