--- a/tbdr/templates/results/run_result.html
+++ b/tbdr/templates/results/run_result.html
@@ -45,7 +45,7 @@
         <div class="col-mt-8">
             <div class="">
 
-                Want to know whats going on under the hood? <button class="btn btn-outline-dark p-1 m-2" type="button" data-toggle="collapse" data-target="#log" aria-expanded="false" aria-controls="log">Toggle log</button>
+                Want to know whats going on under the hood? <button class="btn btn-outline-dark p-1 m-2" type="button" data-bs-toggle="collapse" data-bs-target="#log" aria-expanded="false" aria-controls="log">Toggle log</button>
             </div>
             <div class="pt-4">
 
@@ -59,6 +59,12 @@
             </div>
         </div>
     </div>
+
+	<script>
+		window.setTimeout( function() {
+			window.location.reload();
+		}, 5000);
+	</script>
 
 {% else %}
 
@@ -206,7 +212,7 @@
 									{{ utils.row_val(var["change"],loop.index,var["drugs"]|length,url_for('variants.variant',gene=var['locus_tag'],variant=var['change']))}}
 									{{ utils.row_val(var["type"],loop.index,var["drugs"]|length) }}
 									{{ utils.row_val(var["freq"]|round(2)|float,loop.index,var["drugs"]|length) }}
-									{{ utils.row_val(d['drug'],loop.index,var["drugs"]|length) }}
+									{{ utils.row_val(d['drug']) }}
 									{{ utils.row_val(d["confidence"]) }}
 									{{ utils.row_val(d["comment"]) }}
 
@@ -373,9 +379,9 @@
                 <div class="card border-dark mb-3">
         			<div class="card-header bg-dark text-white text-center">Software</div>
         			<div class="card-body text-dark">
-        				<p><b>TB-Profiler version:</b> {{ result["tbprofiler_version"] }}</p>
-                        <p><b>Database name:</b> {{ result["db_version"]["name"] }}</p>
-                        <p><b>Database version:</b> {{ result["db_version"]["commit"] }}</p>
+        				<p><b>TB-Profiler version:</b> {{ result["pipeline"]["software_version"] }}</p>
+                        <p><b>Database name:</b> {{ result["pipeline"]["db_version"]["name"] }}</p>
+                        <p><b>Database version:</b> {{ result["pipeline"]["db_version"]["commit"] }}</p>
 
 
         			</div>
