--- a/tbdr/templates/sra/browse.html
+++ b/tbdr/templates/sra/browse.html
@@ -60,7 +60,7 @@ $( function() {
             </div>
             <div class="card-body text-center">
                 <form method="post" enctype=multipart/form-data>
-					<div class="form-row">
+					<div class="row">
 						<div class="col-md-4">
 
 							<div class="form-group">
@@ -125,10 +125,10 @@ $( function() {
 
 
 	<div class="row justify-content-md-center">
-		<div class="col-md-6">
+		<div class="col-md-4">
 			{{ utils.counter_table(data,"lineage")}}
 		</div>
-		<div class="col-md-6">
+		<div class="col-md-4">
 			{{ utils.counter_table(data,"spoligotype")}}
 		</div>
 
