--- a/tbdr/templates/sra/landing.html
+++ b/tbdr/templates/sra/landing.html
@@ -72,11 +72,11 @@
     </div>
 </div>
 
-<div class="row justify-content-md-center pt-4 pb-4">
-    <div class="col-md-6 text-right">
+<div class="row justify-content-center pt-4 pb-4">
+    <div class="col-md-3 d-flex justify-content-center">
             <a class="btn btn-outline-dark" href="{{url_for('sra.browse')}}"><h1>Browse Samples</h1></a>
     </div>
-    <div class="col-md-6 text-left">
+    <div class="col-md-3 d-flex justify-content-center">
             <a class="btn btn-outline-dark" href="{{url_for('variants.browse')}}"><h1>Browse Variants</h1></a>
     </div>
 </div>
