--- a/tbdr/templates/utils.html
+++ b/tbdr/templates/utils.html
@@ -385,8 +385,7 @@ background-color: #f8f9fa;
 
 	var map = L.map('mapid').setView([51.505, -0.09], 2);
 
-	L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/toner/{z}/{x}/{y}{r}.{ext}', {
-		attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+	L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 		subdomains: 'abcd',
 		minZoom: 0,
 		maxZoom: 20,
