--- a/tbdr/templates/variants/variant_home.html
+++ b/tbdr/templates/variants/variant_home.html
@@ -60,7 +60,7 @@ $( function() {
             </div>
             <div class="card-body text-center">
                 <form method="post" enctype=multipart/form-data>
-					<div class="form-row">
+					<div class="form-row row">
 						<div class="col-md-4">
 							<div class="form-group">
 							    <label for="exampleFormControlSelect2">Gene</label>
