--- a/tbdr/templates/results/run_result.html
+++ b/tbdr/templates/results/run_result.html
@@ -17,6 +17,11 @@
 		box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 		transform: scale(1.005);
 	}
+
+	/* limit column size to 150 px */
+	.table td {
+		max-width: 200px;
+	}
 	
 </style>
 {% endblock %}
