--- a/tbdr/templates/upload/upload.html
+++ b/tbdr/templates/upload/upload.html
@@ -57,7 +57,7 @@
                         <div>{{form.pairing}}</div>
 					</div>
 
-					<a class="btn btn-outline-primary mt-4 mb-4" data-toggle="collapse" href="#advanced_options_collapse" role="button" aria-expanded="false" aria-controls="advanced_options_collapse">
+					<a class="btn btn-outline-primary mt-4 mb-4" data-bs-toggle="collapse" href="#advanced_options_collapse" role="button" aria-expanded="false" aria-controls="advanced_options_collapse">
 						Advanced options
 					</a>
 
