--- a/tbdr/templates/sra/country.html
+++ b/tbdr/templates/sra/country.html
@@ -24,7 +24,7 @@
 <div class="row justify-content-md-center pb-4">
     <div class="col-md-4 text-center">
 				<h1>{{country}}</h1>
-				<img src="https://cdn.staticaly.com/gh/hjnilsson/country-flags/master/svg/{{country_code}}.svg" alt="" width=100 height=100 class="img-thumbnail border-dark bg-dark">
+				<img src="https://cdn.jsdelivr.net/gh/hjnilsson/country-flags@master/svg/{{country_code}}.svg" alt="" width=100 height=100 class="img-thumbnail border-dark bg-dark">
 				<hr>
 				<div class="">
 					<h4>Country Tuberculosis Statistics</h4>
