--- a/tbdr/templates/upload/upload.html
+++ b/tbdr/templates/upload/upload.html
@@ -21,7 +21,7 @@
 <div class="pb-4">
     <b>Please note:</b> at the moment we can only accomodate uploads of files under 4GB.
     If you have files which are larger or you require many	isolates to be processed
-    and have access to a linux or osX operating system then	it might be worthwhile
+    and have access to a linux or macOS operating system then	it might be worthwhile
     to run the commandline version of tb-profiler. For more information on this please visit the
 	<a href="https://github.com/jodyphelan/TBProfiler/">github repository</a>.
 </div>
