--- a/tbdr/templates/sra/country.html
+++ b/tbdr/templates/sra/country.html
@@ -77,7 +77,7 @@
 
 <div class="row justify-content-md-center">
 	<div class="col-md-8">
-		{{ utils.generic_table(data,{"sample_link" :"ID","drtype":"Drug resistance","country":"Country","lineage":"Lineage","spoligotype":"Spoligotype"},"Samples")}}
+		{{ utils.generic_table(data,{"sample_link" :"ID","drtype":"Drug resistance","country":"Country","lineage":"Lineage","spoligotype":"Spoligotype"},"Samples", buttons=True)}}
 	<div>
 <div>
 
