make js available

--- a/tbdr/templates/upload/upload.html
+++ b/tbdr/templates/upload/upload.html
@@ -92,7 +92,7 @@
 </div>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.1/min/dropzone.min.js"></script>
+<script src="{{ url_for('static', filename='dropzone.min.js')}}"></script>
 
 <script type="application/javascript">
     Dropzone.options.dropper = {
