--- a/tbdr/templates/base.html
+++ b/tbdr/templates/base.html
@@ -13,7 +13,7 @@
 	<script src="{{ url_for('static', filename='popper.min.js')}}"></script>
 
 	<!-- Boostrap icons -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+	<link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-icons.min.css')}}">
 
 	<!-- jQuery -->
 	<script src="{{ url_for('static', filename='jquery-3.7.1.min.js')}}"></script>
