--- a/tbdr/templates/upload/upload_alt.html
+++ b/tbdr/templates/upload/upload_alt.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.1/min/dropzone.min.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='dropzone.min.css')}}">
 
 {% endblock %}
 
@@ -97,7 +97,7 @@
 </div>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.1/min/dropzone.min.js"></script>
+<script src="{{ url_for('static', filename='dropzone.min.js')}}"></script>
 
 <script type="application/javascript">
     Dropzone.options.dropper = {
