--- a/tbdr/templates/upload/upload_complete.html
+++ b/tbdr/templates/upload/upload_complete.html
@@ -20,6 +20,11 @@
 
         </div>
         <div>
+            Do you have NTM data? We are currently working on a NTM version of TB-Profiler.
+            You can test it out <a href="https://bioinformatics.lshtm.ac.uk/ntm-profiler">here</a>! 
+            This is still in development so please let us know if you have any feedback.
+        </div>
+        <div>
             While you wait would you be willing to give some feedback on TB-Profiler? 
             <button data-tf-slider="lS4u9U0O" data-tf-position="right" data-tf-opacity="100" data-tf-iframe-props="title=TBDR feedback" data-tf-transitive-search-params data-tf-medium="snippet" class="btn btn-info p-1 m-2">Click here</button><script src="//embed.typeform.com/next/embed.js"></script>
             to provide feedback.
